# speech-to-speech-light

./: .gitignore
F5-TTS/src/f5_tts/train/: finetune_gradio.py
IndicF5/: README.md  requirements.txt  setup.py
IndicF5/f5_tts.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  requires.txt
IndicF5/f5_tts/infer/: utils_infer.py
IndicF5/f5_tts/train/: finetune_cli.py
IndicF5/f5_tts/train/datasets/: prepare_csv_wavs.py  prepare_csvs_wavs_v2.py  prepare_csvs_wavs_v3.py  prepare_in22_en_10k.py  prepare_optimized.py
live-voice-demo/: agent_benglish.py  agent_eng_chin.py  pyproject.toml
live-voice-streaming/: .env  README.md  agent.py  architecture.md  cleanup.sh  constants.py  logger_setup.py  pyproject.toml  run_agent.py  server.py  setup.md  test_ctranslate2.py  test_dll_hell.py  test_imports.py  test_imports2.py  test_imports3.py
live-voice-streaming/static/: index.html  style.css
