[project]
name = "live-voice-demo"
version = "0.1.0"
description = "Live Voice Demo"
requires-python = ">=3.11,<3.13"
dependencies = [
    "transformers",
    "torch",
    "soundfile",
    "faster-whisper",
    "open-webui",
    "numpy<2",
    "hf-transfer>=0.1.9",
    "f5-tts>=1.1.17",
    "httpx>=0.28.1",
    "torchcodec>=0.14.0",
]

[tool.uv.sources]
f5-tts = { path = "../IndicF5", editable = true }
