[project]
name = "live-voice-streaming"
version = "0.1.0"
description = "Live Voice Streaming"
requires-python = ">=3.11,<3.13"
dependencies = [
    "transformers",
    "torch==2.5.1+cu121",
    "torchaudio==2.5.1+cu121",
    "soundfile",
    "faster-whisper",
    "numpy<2",
    "hf-transfer>=0.1.9",
    "f5-tts>=1.1.17",
    "httpx>=0.28.1",
    "torchcodec>=0.14.0",
    "sounddevice>=0.5.5",
    "python-dotenv>=1.2.2",
    "fastapi>=0.138.1",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
    "gdown>=6.1.0",
]

[tool.uv.sources]
f5-tts = { path = "../IndicF5", editable = true }
torch = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
